--- a/index.html
+++ b/index.html
@@ -521,6 +521,7 @@
 					</ul>
 					<ul class="copyright">
 						<!-- <li>&copy; Untitled</li> -->
+						<li>"Background-image: Philosophy, 1900-1907 by Gustav Klimt"></li>
 						<li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
 					</ul>
 				</div>
