--- a/index.html
+++ b/index.html
@@ -521,7 +521,7 @@
 					</ul>
 					<ul class="copyright">
 						<!-- <li>&copy; Untitled</li> -->
-						<li>Background-image: Philosophy, 1900-1907 by Gustav Klimt \n 1945 engulfed in flames of WWII></li>
+						<li>Background-image: Philosophy, 1900-1907 by Gustav Klimt, 1945 destroyed in WWII></li>
 						<li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
 					</ul>
 				</div>
