--- a/research.html
+++ b/research.html
@@ -16,9 +16,9 @@
 		<!-- Header -->
 			<header id="header">
 				<div class="inner">
-					<a href="#" class="image avatar"><img src="images/avatar.jpg" alt="" /></a>
+<!-- 					<a href="#" class="image avatar"><img src="images/avatar.jpg" alt="" /></a> -->
 					<h1>
-						<strong>I am Zhenghao Xu, </strong> B.S. in Mathematics at Peking University, working on <strong>Astrophysical Simulations + Machine Learning</strong>
+<!-- 						<strong>I am Zhenghao Xu, </strong> B.S. in Mathematics at Peking University, working on <strong>Astrophysical Simulations + Machine Learning</strong> -->
 					</a>.
 					</h1>
 				</div>
@@ -48,8 +48,8 @@
 			<footer id="footer">
 				<div class="inner">	
 					<ul class="icons">
-						<li><a href="https://www.zhihu.com/people/piao-shen-81" class="icon brands fa-zhihu"><span class="label">Zhihu</span></a></li>
-						<li><a href="https://github.com/zhenghaoxu" class="icon brands fa-github"><span class="label">Github</span></a></li>
+<!-- 						<li><a href="https://www.zhihu.com/people/piao-shen-81" class="icon brands fa-zhihu"><span class="label">Zhihu</span></a></li> -->
+<!-- 						<li><a href="https://github.com/zhenghaoxu" class="icon brands fa-github"><span class="label">Github</span></a></li> -->
 						<!-- <li><a href="#" class="icon brands fa-dribbble"><span class="label">Dribbble</span></a></li> -->
 						<!-- <li><a href="zhenghaoxu97@gmail.com" class="icon solid fa-envelope"><span class="label">Email</span></a></li> -->
 					</ul>
