--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <!DOCTYPE HTML>
 <html>
 	<head>
-		<title>Zhenghao Xu's Homepage</title>
+		<title>John Xu's Homepage</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -16,9 +16,9 @@
 		<!-- Header -->
 		<header id="header">
 			<div class="inner">
-				<a href="#" class="image avatar"><img src="images/avatar2.png" alt="" /></a>
+<!-- 				<a href="#" class="image avatar"><img src="images/avatar2.png" alt="" /></a> -->
 				<h1>
-					<strong>Hi, I am Zhenghao Xu, a 3rd year Graduate Student at UCSB</strong>
+					<strong>Hi, I am John Xu, a 4rd year Graduate Student at UCSB</strong>
 				</h1>
 			</div>
 		</header>
@@ -30,7 +30,7 @@
 				<header class="major">
 					<h2>BIOGRAPHY</h2>
 				</header>
-				<p>Hi, I'm Zhenghao Xu 徐政豪. Currently, I am a graduate student at <a href="https://www.physics.ucsb.edu">Department of Physics, University of California, Santa Barbara</a>. I used to work as a <b>research assistant</b> at <a href="http://www.castu.tsinghua.edu.cn/publish/casen/index.html">Institute for Advanced Study, Tsinghua University</a>. I received my <b>B.S. in Mathematics </b> from <a href="http://english.math.pku.edu.cn/">School of Mathematical Sciences, Peking University</a>, in July of 2019, major in Applied and Computational Mathematics, as well as minor in Chinese Language & Literature. I worked as game developer in the indie game group MINIBUGS in 2020. </p>
+<!-- 				<p>Hi, I'm John Xu. Currently, I am a graduate student at <a href="https://www.physics.ucsb.edu">Department of Physics, University of California, Santa Barbara</a>. I used to work as a <b>research assistant</b> at <a href="http://www.castu.tsinghua.edu.cn/publish/casen/index.html">Institute for Advanced Study, Tsinghua University</a>. I received my <b>B.S. in Mathematics </b> from <a href="http://english.math.pku.edu.cn/">School of Mathematical Sciences, Peking University</a>, in July of 2019, major in Applied and Computational Mathematics, as well as minor in Chinese Language & Literature. I worked as game developer in the indie game group MINIBUGS in 2020. </p>
 
 				<p>My general research interests cover the interdisciplinary study of Applied Mathematics, Data Science and Astrophysics. 
 				Currently, I am working on three projects: 
@@ -43,7 +43,7 @@
 
 				<!-- <p>Bayesian inference for sophisticated models in a computationally tractable implementation; data-driven approaches to model disk rotation curves and search for the influence of planets;</p> -->
 
-				<p>If you are interested in any problem that I'm working on or related, please contact me! I'm look forward to potential collaborators!</p>
+<!-- 				<p>If you are interested in any problem that I'm working on or related, please contact me! I'm look forward to potential collaborators!</p> --> -->
 
 				<ul class="actions">
 					<li><a href="mailto:xuzhenghao@pku.edu.cn" class="button">Email Me ! ——— xuzhenghao[at]pku[dot]edu[dot]cn</a></li>
@@ -56,7 +56,7 @@
 							<h2>BIOGRAPHY</h2>
 						</header>
 						
-						<p><strong>Graduate Student</strong>, 2021-Present <br />
+<!-- 						<p><strong>Graduate Student</strong>, 2021-Present <br />
 						<a href="https://www.physics.ucsb.edu">Department of Physics, University of California, Santa Barbara</a><br />
 						Santa Barbara, California, USA<br />
 						</p>
@@ -73,16 +73,16 @@
 						<a href="https://space.mit.edu">Kavli Institute for Astrophysics and Space Research</a><br />
 						MIT, Massachusetts, USA <br />
 						<!-- (Massachusetts Institute of Technology) -->
-						Advisor: <a href="http://web.mit.edu/physics/people/faculty/vogelsberger_mark.html">Prof. Mark Vogelsberger</a>
+<!-- 						Advisor: <a href="http://web.mit.edu/physics/people/faculty/vogelsberger_mark.html">Prof. Mark Vogelsberger</a>
 						</p>
 
 						<p><strong>Bachelor of Science</strong>, 2015-2019 <br />
-						<!-- Department of Scientific & Engineering Computing<br /> -->
-						<a href="http://english.math.pku.edu.cn/">School of Mathematical Sciences</a><br />
+<!-- 						Department of Scientific & Engineering Computing<br /> -->
+<!-- 						<a href="http://english.math.pku.edu.cn/">School of Mathematical Sciences</a><br />
 						Peking University, Beijing, China</p>
 						<ul class="actions">
 							<li><a href="myCV-2023.pdf" class="button">Curriculum vitae</a></li>
-						</ul>
+						</ul> --> 
 					</section>
 				
 
