--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
 
 <!-- 				<p>If you are interested in any problem that I'm working on or related, please contact me! I'm look forward to potential collaborators!</p> --> -->
 
-				<ul class="actions">
-					<li><a href="mailto:xuzhenghao@pku.edu.cn" class="button">Email Me ! ——— xuzhenghao[at]pku[dot]edu[dot]cn</a></li>
+<!-- 				<ul class="actions"> -->
+<!-- 					<li><a href="mailto:xuzhenghao@pku.edu.cn" class="button">Email Me ! ——— xuzhenghao[at]pku[dot]edu[dot]cn</a></li> -->
 				</ul>
 			</section>
 				<!-- One More -->
